[package]
name = "iota-js"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]

[dependencies]
iota-sign = { git = "https://github.com/iota-nursery/iota.rs" }
iota-trytes = { git = "https://github.com/iota-nursery/iota.rs" }
iota-curl = { git = "https://github.com/iota-nursery/iota.rs" }
