[package]
name = "iota-js"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]

[dependencies]
iota-trytes = { git = "https://github.com/iota-nursery/iota.rs" }

[dependencies.iota-sign]
git = "https://github.com/iota-nursery/iota.rs"
default-features = false

[dependencies.iota-curl]
git = "https://github.com/iota-nursery/iota.rs"
default-features = false
