[package]
name = "iota-js"
version = "0.1.0"
authors = ["Andreas C. Osowski <andreas@osowski.de>"]
keywords = ["no_std"]

[dependencies]
iota-trytes = { git = "https://github.com/iota-nursery/iota.rs" }
cty = "*"

[dependencies.iota-sign]
git = "https://github.com/iota-nursery/iota.rs"
default-features = false

[dependencies.iota-curl]
git = "https://github.com/iota-nursery/iota.rs"
default-features = false

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"
